# luthor-ai-systems-framework

./: .dockerignore  .env.example  .gitignore  .trivyignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  laf.db  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker.yml  publish.yml  release-image.yml  release.yml  sbom.yml  scorecard.yml  security-scan.yml
policies/: default.yaml  restricted.yaml
reports/: pii_internal.report.json  pii_restricted_block.report.json  run.summary.json  safe.report.json  scenario_report_20260301_032817.md
scenarios/examples/: internal_email.yaml  pii_internal.yaml  pii_restricted_block.yaml  restricted_phone.yaml  safe.yaml
scripts/: dev.sh
src/laf/: __main__.py  models.py
src/laf/api/: auth.py  main.py
src/laf/api/routes/: evaluate.py  history.py  home.py  metrics.py  profiles.py  project.py
src/laf/governance/: models.py  pii_detect.py  policy_engine.py  profiles.py  rules.py
src/laf/policies/: default.yaml
src/laf/safety/: redaction.py
src/laf/scenarios/: loader.py  runner.py  schema.py
src/laf/storage/: db.py
tests/: test_cli.py  test_evaluate.py  test_health.py
